# SHABEEBNIBRAS_PORTFOLIO

./: .gitignore  Cargo.toml  Trunk.toml  build.sh  index.html  vercel.json
assets/: README.md
src/: app.rs  lib.rs  main.rs  projects.rs  skills.rs
src/components/: cursor.rs  experience.rs  footer.rs  hero.rs  mod.rs  motion.rs  project_card.rs  projects_grid.rs  reveal.rs  shader_bg.rs  skills.rs  status_bar.rs  upcoming.rs  volunteering.rs
style/: main.css
