[package]
name = "perm_portfolio"
version = "0.1.0"
edition = "2021"
authors = ["Syed Shabeeb Nibras"]
description = "Cyber-terminal Rust portfolio (Leptos + WASM)"

[lib]
# rlib only — main.rs uses it as a normal Rust library.
# Adding cdylib here would emit a second perm_portfolio.wasm that collides
# with the bin's wasm and confuses Trunk.
crate-type = ["rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
log = "0.4"
console_log = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlVideoElement",
  "HtmlCanvasElement",
  "HtmlScriptElement",
  "Performance",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "WebGlBuffer",
  "WebGlVertexArrayObject",
  "MouseEvent",
  "DomTokenList",
  "IntersectionObserver",
  "IntersectionObserverEntry",
  "IntersectionObserverInit",
  "DomRect",
  "CssStyleDeclaration",
  "EventTarget",
  "Node",
  "NodeList",
  "MediaQueryList",
  "CanvasRenderingContext2d",
  "console",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
